Rendu4/_build/_log
### Starting build.
# Target: main.ml.depends, tags: { extension:ml, file:main.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules main.ml > main.ml.depends # cached
# Target: eval.ml.depends, tags: { extension:ml, file:eval.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules eval.ml > eval.ml.depends # cached
# Target: expr.ml.depends, tags: { extension:ml, file:expr.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules expr.ml > expr.ml.depends # cached
# Target: expr.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:expr.cmo, file:expr.ml, implem, ocaml, quiet }
/usr/bin/ocamlc.opt -c -o expr.cmo expr.ml # cached
# Target: lexer.mll, tags: { extension:mll, file:lexer.mll, lexer, ocaml, ocamllex, quiet }
/usr/bin/ocamllex.opt -q lexer.mll # cached
# Target: lexer.ml.depends, tags: { extension:ml, file:lexer.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules lexer.ml > lexer.ml.depends # cached
# Target: parser.mly, tags: { extension:mly, file:parser.mly, infer, ocaml, ocamlyacc, parser, quiet }
/usr/bin/ocamlyacc -v parser.mly # cached
# Target: parser.mli.depends, tags: { extension:mli, file:parser.mli, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules parser.mli > parser.mli.depends # cached
# Target: parser.cmi, tags: { byte, compile, extension:mli, file:parser.mli, interf, ocaml, quiet }
/usr/bin/ocamlc.opt -c -o parser.cmi parser.mli # cached
# Target: lexer.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:lexer.cmo, file:lexer.ml, implem, ocaml, quiet }
/usr/bin/ocamlc.opt -c -o lexer.cmo lexer.ml # cached
# Target: resoud.ml.depends, tags: { extension:ml, file:resoud.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules resoud.ml > resoud.ml.depends # cached
# Target: type.ml.depends, tags: { extension:ml, file:type.ml, ocaml, ocamldep, quiet }
/usr/bin/ocamldep.opt -modules type.ml > type.ml.depends
# Target: type.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:type.cmo, file:type.ml, implem, ocaml, quiet }
/usr/bin/ocamlc.opt -c -o type.cmo type.ml
+ /usr/bin/ocamlc.opt -c -o type.cmo type.ml
File "type.ml", line 56, characters 21-2953:
56 | .....................function
57 |   | Const k -> Inte
58 |   | Unite -> Unit
59 |   | Variable s -> recup env s
60 |   | Tuple(l) -> Tuples (List.map (typage env) l)
...
93 |                           incr cota; append (!cota,temp1); incr cota; append (!cota,temp2); append (!cota,Pasdef ((!cota)-1)); temp2
94 |   | Fonction(m,e) -> let temp1 = typage ((addmotenv m)@env) e in
95 |                      let temp2 = recomposemot env m in
96 |                      Fonc (temp2,temp1)
Warning 8: this pattern-matching is not exhaustive.
Here is an example of a case that is not matched:
(Match (_, [])|Try _)
# Target: eval.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:eval.cmo, file:eval.ml, implem, ocaml, quiet }
/usr/bin/ocamlc.opt -c -o eval.cmo eval.ml
# Target: resoud.cmo, tags: { byte, compile, extension:cmo, extension:ml, file:resoud.cmo, file:resoud.ml, implem, ocaml, quiet }
/usr/bin/ocamlc.opt -c -o resoud.cmo resoud.ml
+ /usr/bin/ocamlc.opt -c -o resoud.cmo resoud.ml
File "resoud.ml", line 21, characters 38-39:
21 |    | Pasdef(s) -> boucle n encours s1 s
                                           ^
Error: This expression has type int but an expression was expected of type
         Type.types
Command exited with code 2.
# Compilation unsuccessful.
